syntax = "proto3";
package test;

option java_package = "io.confluent.telemetry.events";

enum AnEnum {
    A = 0;
    B = 1;
}

message AMessage {
    AnEnum anEnum = 1;
    string aString = 2;
    int64 aLong = 3;
    int32 anInt = 4;
    string anotherString = 5;
    string second_string = 6;
}
